optimize the spi logic of get extensions by feature (#44)
* feat(extension inject): Added the function of injecting extension object

* feat(extension inject): Optimize the function of injecting extension object

* feat(extension inject): add copyright info and fix the error of checkstyle

* feat(extension inject): add name attribute in Feature

* feat(extension inject): add comments and optimize code

* feat(extension inject): optimize the way to get ALLOW_CYCLE

* feat(extension inject): optimize import

* feat(extension inject): add unit test

* feat(extension inject): optimize the logic of get extension.

* feat(extension inject): optimize the logic of get extension and supplementary unit test

* feat(extension inject): optimize the logic of get extension from cache